--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             </div>
         </div>
 
+        <!-- <img id="customCursor" src="../assets/pixel-art-pickaxe-vector-illustration-retro-video-game-design_1292377-22737-removebg-preview.png" alt="Pickaxe Cursor"> -->
+
         <!-- Section droite : Améliorations -->
         <div id="sectionRight" class="inset">
             <div id="upgradeTitle" class="inset title zoneTitle">Upgrade</div>
