--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <link rel="stylesheet" href="./style/cookie.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Cookie Clicker avec Sections</title>
@@ -15,7 +16,10 @@
             <div id="cookieCounter">0 Ressources</div>
             <div id="cookiePerSecond">par seconde : 0</div>
             <div id="cookie">
-                <img src="assets/pixel-art-rock-pile-detailed-8-bit-illustration-grey-stones_1292377-12348-removebg-preview.png" alt="Rock Pile">
+                <img src="assets/charbonpixelart.png" alt="Coal Pile" style="display: flex;">
+                <img src="assets/pixel-art-rock-pile-detailed-8-bit-illustration-grey-stones_1292377-12348-removebg-preview.png" alt="Rock Pile" style="display: none;">
+                <img src="assets/Goldpixelart.png" alt="gold Pile" style="display: none;">
+                <img src="assets/diamondpixelart.png" alt="diamond Pile" style="display: none;">
             </div>
             <div class="miner">
                 <img src="assets/mininggold.gif" alt="">
@@ -26,7 +30,7 @@
             <div class="minerRunner">
                 <img src="assets/minerrunning.webp" alt="">
             </div>
-            <div class="bat" class="bat2">
+            <div class="bat">
                 <img src="assets/batpixel art.gif" alt="">
             </div>
         </div>
